// Code generated by protoc-gen-vtobj. Please DO NOT EDIT.

syntax = "proto3";

package manager;

option go_package = "../manager";

import "manager.proto";

message SubsystemStatusList {
	repeated SubsystemStatus items = 1;
}

message BuildInfoList {
	repeated BuildInfo items = 1;
}
